NMEA/dev_ws/log/build_2024-01-14_23-55-19/nmea/stderr.log
  File "/home/user/Desktop/vilab/dev_ws/install/nmea/lib/python3.8/site-packages/nmea/nmea_subscriber.py", line 36
    n = nmea.(nmea_sentence)
             ^
SyntaxError: invalid syntax

